--- a/src/main/resources/assets/rubber_duck/lang/en_us.json
+++ b/src/main/resources/assets/rubber_duck/lang/en_us.json
@@ -1,4 +1,6 @@
 {
     "block.rubber_duck.rubber_duck": "Rubber Duck",
-    "subtitle.rubber_duck.squeak": "Rubber duck squeaks"
+    "subtitle.rubber_duck.squeak": "Rubber duck squeaks",
+    "advancements.rubber_duck.find_a_duck.title": "Quack!",
+    "advancements.rubber_duck.find_a_duck.description": "Find a rubber duck"
 }
